@@ -5,13 +5,15 @@ import static de.tum.in.www1.artemis.service.util.TimeLogUtil.formatDurationFrom
 
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 
 import javax.servlet.http.HttpServletRequest;
+import javax.validation.constraints.NotNull;
 import javax.ws.rs.BadRequestException;
 
-import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
@@ -34,7 +36,7 @@ import de.tum.in.www1.artemis.domain.quiz.QuizSubmission;
 import de.tum.in.www1.artemis.repository.*;
 import de.tum.in.www1.artemis.service.AuthorizationCheckService;
 import de.tum.in.www1.artemis.service.exam.*;
-import de.tum.in.www1.artemis.service.scheduled.cache.monitoring.ExamMonitoringScheduleService;
+import de.tum.in.www1.artemis.service.messaging.InstanceMessageSendService;
 import de.tum.in.www1.artemis.service.util.HttpRequestUtils;
 import de.tum.in.www1.artemis.web.rest.dto.StudentExamWithGradeDTO;
 import de.tum.in.www1.artemis.web.rest.errors.AccessForbiddenException;
@@ -77,16 +79,15 @@ public class StudentExamResource {
 
     private final ExamService examService;
 
-    private final ExamMonitoringScheduleService examMonitoringScheduleService;
+    private final InstanceMessageSendService instanceMessageSendService;
 
-    @Value("${info.browser-fingerprints-enabled:#{true}}")
-    private boolean fingerprintingEnabled;
+    @Value("${info.student-exam-store-session-data:#{true}}")
+    private boolean storeSessionDataInStudentExamSession;
 
     public StudentExamResource(ExamAccessService examAccessService, StudentExamService studentExamService, StudentExamAccessService studentExamAccessService,
             UserRepository userRepository, AuditEventRepository auditEventRepository, StudentExamRepository studentExamRepository, ExamDateService examDateService,
             ExamSessionService examSessionService, StudentParticipationRepository studentParticipationRepository, QuizExerciseRepository quizExerciseRepository,
-            ExamRepository examRepository, AuthorizationCheckService authorizationCheckService, ExamService examService,
-            ExamMonitoringScheduleService examMonitoringScheduleService) {
+            ExamRepository examRepository, AuthorizationCheckService authorizationCheckService, ExamService examService, InstanceMessageSendService instanceMessageSendService) {
         this.examAccessService = examAccessService;
         this.studentExamService = studentExamService;
         this.studentExamAccessService = studentExamAccessService;
@@ -100,7 +101,7 @@ public class StudentExamResource {
         this.examRepository = examRepository;
         this.authorizationCheckService = authorizationCheckService;
         this.examService = examService;
-        this.examMonitoringScheduleService = examMonitoringScheduleService;
+        this.instanceMessageSendService = instanceMessageSendService;
     }
 
     /**
@@ -122,7 +123,7 @@ public class StudentExamResource {
 
         StudentExam studentExam = studentExamRepository.findByIdWithExercisesElseThrow(studentExamId);
 
-        loadExercisesForStudentExam(studentExam);
+        loadQuizExercisesForStudentExam(studentExam);
 
         // fetch participations, submissions and results for these exercises, note: exams only contain individual exercises for now
         // fetching all participations at once is more effective
@@ -193,7 +194,7 @@ public class StudentExamResource {
         studentExam.setWorkingTime(workingTime);
         var savedStudentExam = studentExamRepository.save(studentExam);
 
-        examMonitoringScheduleService.scheduleExamActivitySave(examId);
+        instanceMessageSendService.sendExamMonitoringSchedule(examId);
 
         return ResponseEntity.ok(savedStudentExam);
     }
@@ -368,7 +369,10 @@ public class StudentExamResource {
             throw new AccessForbiddenException("You are not allowed to access the summary of a student exam which was NOT submitted!");
         }
 
-        // 3rd fetch participations, submissions and results and connect them to the studentExam
+        // 3rd: Reload the Quiz-Exercises
+        loadQuizExercisesForStudentExam(studentExam);
+
+        // 4th fetch participations, submissions and results and connect them to the studentExam
         if (studentExam.getExam().isTestExam()) {
             fetchParticipationsSubmissionsAndResultsForTestExam(studentExam, user);
         }
@@ -384,9 +388,9 @@ public class StudentExamResource {
      * GET /courses/{courseId}/exams/{examId}/student-exams/grade-summary : Return student exam result, aggregate points, assessment result
      * for a student exam and grade calculations if the exam is assessed. Only instructors can use userId parameter to get exam results of other users,
      * if the caller is a student, userId should either be the user id of the caller or empty.
-     *
+     * <p>
      * Does not return the student exam itself to save bandwidth.
-     *
+     * <p>
      * See {@link StudentExamWithGradeDTO} for more explanation.
      *
      * @param courseId  the course to which the student exam belongs to
@@ -415,13 +419,12 @@ public class StudentExamResource {
             throw new AccessForbiddenException("You are not allowed to access the grade summary of a student exam which was NOT submitted!");
         }
 
-        loadExercisesForStudentExam(studentExam);
+        loadQuizExercisesForStudentExam(studentExam);
 
         // 3rd fetch participations, submissions and results and connect them to the studentExam
         fetchParticipationsSubmissionsAndResultsForRealExam(studentExam, targetUser);
 
-        List<StudentParticipation> participations = studentExam.getExercises().stream().flatMap(exercise -> exercise.getStudentParticipations().stream())
-                .collect(Collectors.toList());
+        List<StudentParticipation> participations = studentExam.getExercises().stream().flatMap(exercise -> exercise.getStudentParticipations().stream()).toList();
 
         StudentExamWithGradeDTO studentExamWithGradeDTO = examService.calculateStudentResultWithGradeAndPoints(studentExam, participations);
         studentExamWithGradeDTO.studentExam = null;  // To save bandwidth.
@@ -472,10 +475,10 @@ public class StudentExamResource {
 
     /**
      * POST /courses/{courseId}/exams/{examId}/student-exams/assess-unsubmitted-and-empty-student-exams : Assess unsubmitted student exams and empty submissions.
-     *
+     * <p>
      * Finds student exams which the students did not submit on time i.e. {@link StudentExam#isSubmitted()} is false and assesses all exercises with 0 points in {@link StudentExamService#assessUnsubmittedStudentExams}.
      * Additionally assess all empty exercises with 0 points in {@link StudentExamService#assessEmptySubmissionsOfStudentExams}.
-     *
+     * <p>
      * NOTE: A result with 0 points is only added if no other result is present for the latest submission of a relevant StudentParticipation.
      *
      * @param courseId the id of the course
@@ -540,14 +543,15 @@ public class StudentExamResource {
     @PreAuthorize("hasRole('INSTRUCTOR')")
     public ResponseEntity<Integer> startExercises(@PathVariable Long courseId, @PathVariable Long examId) {
         long start = System.nanoTime();
-        log.info("REST request to start exercises for student exams of exam {}", examId);
-
         examAccessService.checkCourseAndExamAccessForInstructorElseThrow(courseId, examId);
 
+        User instructor = userRepository.getUser();
+        log.info("REST request to start exercises for student exams of exam {}", examId);
+        AuditEvent auditEvent = new AuditEvent(instructor.getLogin(), Constants.PREPARE_EXERCISE_START, "examId=" + examId, "user=" + instructor.getLogin());
+        auditEventRepository.add(auditEvent);
+
         int numberOfGeneratedParticipations = studentExamService.startExercises(examId);
-
         log.info("Generated {} participations in {} for student exams of exam {}", numberOfGeneratedParticipations, formatDurationFrom(start), examId);
-
         return ResponseEntity.ok().body(numberOfGeneratedParticipations);
     }
 
@@ -562,7 +566,7 @@ public class StudentExamResource {
      * @param studentExam the student exam to be prepared
      */
     private void prepareStudentExamForConduction(HttpServletRequest request, User currentUser, StudentExam studentExam) {
-        loadExercisesForStudentExam(studentExam);
+        loadQuizExercisesForStudentExam(studentExam);
 
         // 2nd: mark the student exam as started
         studentExam.setStarted(true);
@@ -613,7 +617,7 @@ public class StudentExamResource {
         fetchParticipationsSubmissionsAndResultsForRealExam(studentExam, currentUser);
 
         // 5th: Reload the Quiz-Exercises
-        loadExercisesForStudentExam(studentExam);
+        loadQuizExercisesForStudentExam(studentExam);
 
         // 6th: Save StudentExam
         studentExamRepository.save(studentExam);
@@ -632,10 +636,10 @@ public class StudentExamResource {
      * @param studentExam the student exam to be prepared
      */
     private void createNewExamSession(HttpServletRequest request, StudentExam studentExam) {
-        final var ipAddress = HttpRequestUtils.getIpAddressFromRequest(request).orElse(null);
-        final String browserFingerprint = !fingerprintingEnabled ? null : request.getHeader("X-Artemis-Client-Fingerprint");
-        final String instanceId = !fingerprintingEnabled ? null : request.getHeader("X-Artemis-Client-Instance-ID");
-        final String userAgent = request.getHeader("User-Agent");
+        final var ipAddress = !storeSessionDataInStudentExamSession ? null : HttpRequestUtils.getIpAddressFromRequest(request).orElse(null);
+        final String browserFingerprint = !storeSessionDataInStudentExamSession ? null : request.getHeader("X-Artemis-Client-Fingerprint");
+        final String instanceId = !storeSessionDataInStudentExamSession ? null : request.getHeader("X-Artemis-Client-Instance-ID");
+        final String userAgent = !storeSessionDataInStudentExamSession ? null : request.getHeader("User-Agent");
         ExamSession examSession = this.examSessionService.startExamSession(studentExam, browserFingerprint, userAgent, instanceId, ipAddress);
         examSession.hideDetails();
         examSession.setInitialSession(this.examSessionService.checkExamSessionIsInitial(studentExam.getId()));
@@ -670,16 +674,14 @@ public class StudentExamResource {
      * @param user logged-in user with groups and authorities
      */
     private void fetchParticipationsSubmissionsAndResultsForTestExam(StudentExam studentExam, User user) {
-        // 1st: Load (Quiz-)Exercises
-        loadExercisesForStudentExam(studentExam);
 
-        // 2nd: fetch participations, submissions and results.
+        // 1st: fetch participations, submissions and results.
         List<StudentParticipation> participations = studentParticipationRepository
                 .findParticipationsByStudentIdAndIndividualExercisesWithEagerSubmissionsResultWithoutAssessor(studentExam);
 
         boolean isAtLeastInstructor = authorizationCheckService.isAtLeastInstructorInCourse(studentExam.getExam().getCourse(), user);
 
-        // 3rd: connect & filter the exercises and student participations including the latest submission and results where necessary, to make sure all relevant associations are
+        // 2nd: connect & filter the exercises and student participations including the latest submission and results where necessary, to make sure all relevant associations are
         // available
         for (Exercise exercise : studentExam.getExercises()) {
             filterParticipationForExercise(studentExam, exercise, participations, isAtLeastInstructor);
@@ -784,7 +786,7 @@ public class StudentExamResource {
      *
      * @param studentExam the studentExam for which to load exercises
      */
-    private void loadExercisesForStudentExam(StudentExam studentExam) {
+    private void loadQuizExercisesForStudentExam(StudentExam studentExam) {
         for (int i = 0; i < studentExam.getExercises().size(); i++) {
             var exercise = studentExam.getExercises().get(i);
             if (exercise instanceof QuizExercise) {
